# adoc-math

./: .gitignore  MANIFEST.in  README.adoc  pyproject.toml  setup.py
adoc_math/: __init__.py  __main__.py  a_helpers.py  b_reading.py  c_parsing.py  d_mathjax_wrapper.js  e_svg_handling.py  e_svg_transforming.py  f_processing.py  g_output.py  i_impl.py
adoc_math/_common/: __init__.py  a_imports.py  b_types.py  c_constants.py  d_exceptions.py  e_utils.py
adoc_math/_setup/: __main__.py  a_install.py  b_link.py
example/: build-pdm.sh  build.sh  pdf-theme.yml  post.adoc  pre.adoc
