[project]
name = "adoc-math"
description = "Use MathJax (Latex or AsciiMath) in your AsciiDoc projects!"
# `version` is set by adoc_math/__main__.py
# version = "1.0.0"
authors = [{ name = "Dominik Teiml" }]
dependencies = []
requires-python = ">=3.7"
readme = "README.adoc"
license = { text = "ISC" }
keywords = [
    "tex",
    "latex",
    "mathjax",
    "asciidoc",
    "asciidoctor",
    "katex",
    "asciimath",
    "asciidoctor-pdf",
]
classifiers = [
    "Topic :: Text Editors :: Text Processing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dynamic = ["version"]

[project.urls]
Reposity = "https://github.com/hacker-dom/adoc-math"

[tool.pdm]
version = { from = "adoc_math/__main__.py" }

[project.scripts]
adoc-math = "adoc_math.__main__:main"
adoc-math-link = "adoc_math._setup.link:main"
adoc-math-install = "adoc_math._setup.install:main"
adoc-math-setup = "adoc_math._setup.__main__:main"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
